# ballot-proofer-functions

./: .env.example  .gitignore  README.md  ai.py  ai_define.py  ai_proof.py  ballot.md  di.py  function_app.py  pyproject.toml  requirements.txt  test_define.py  test_proof.py
.github/workflows/: main_ballot-proofer-function.yml
ai/: chat.py  document.py
ai/prompts/: __init__.py  ballot-definition-prompt.txt  ballot-proof-prompt.txt  error-box-prompt.txt
ballot/: define.py  proof.py
input/definitions/: ballot_definition.json  ballot_definition_wrong.json
prompts/: __init__.py  ballot-definition-prompt.txt  ballot-layout-prompt.txt  ballot-proof-prompt-backup.txt  ballot-proof-prompt.txt
utils/: ai.py  ballot.py  document.py  proof.py  storage.py
